Implement Phase 6: Zero-Copy & Advanced Serialization Optimizations